[package]
name = "sierra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
thiserror = "1.0.29"
crossterm = "0.17.3"
chrono = "0.4.11"
termcolor = "1.1"
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
